--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6914,6 +6914,12 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 
 
+-------------------------------------------------------------------
+6.01.02
+
+-BUG FIX: Miscellaneous (minor)
+
+-------------------------------------------------------------------
 
 
 
