UX, fixed chart links, refactoring
UX, fixed chart links, refactoring

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6917,6 +6917,8 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 -------------------------------------------------------------------
 6.01.02
 
+-BUG FIX: Fixed price chart titles covering time period links, on smaller screens
+
 -BUG FIX: Miscellaneous (minor)
 
 -Minor polished interface styling / UX
