--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6939,6 +6939,17 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 
 
+-------------------------------------------------------------------
+6.01.03
+
+-BUG FIX: TBD
+
+-Minor user experience improvements
+
+-------------------------------------------------------------------
+
+
+
 
 
 
