--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6942,7 +6942,7 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 -------------------------------------------------------------------
 6.01.03
 
--BUG FIX: TBD
+-BUG FIX: Fixed FALSE POSITIVE alerts in the malware scanner built-in to this app, for asset market IDs CONTAINING CRYPTO ADDRESSES, when adding new assets / markets in the admin interface (for Jupiter Aggregator, CoinGecko Terminal, etc), which caused 'Invalid security token' error messages when reviewing desired market additions
 
 -Minor user experience improvements
 
