--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6954,6 +6954,17 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 
 
+-------------------------------------------------------------------
+6.01.04
+
+-BUG FIX: TBD
+
+-Minor user experience improvements / runtime optimizations
+
+-------------------------------------------------------------------
+
+
+
 
 
 
