--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6957,7 +6957,7 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 -------------------------------------------------------------------
 6.01.04
 
--BUG FIX: TBD
+-BUG FIX: Miscellaneous (minor)
 
 -Minor user experience improvements / runtime optimizations
 
