--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6954,6 +6954,21 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 
 
+-------------------------------------------------------------------
+6.01.04
+
+-BUG FIX: Miscellaneous (minor)
+
+-Secured / optimized the Access Stats feature (in Admin Area => System Monitoring), to run from /cache/secured/, and run faster
+
+-Added "Referrer" data for Access Stats (shows what page the visit initiated from, if available)
+
+-Minor user experience improvements / runtime optimizations
+
+-------------------------------------------------------------------
+
+
+
 
 
 
